hard-gists/7f9422fc8372b7c4b1a2/run.log
=== Docker Run Log for 7f9422fc8372b7c4b1a2 ===
Started at: Mi 29. Okt 17:35:56 CET 2025

[2025-10-29 17:35:56] START: Running container for 7f9422fc8372b7c4b1a2
[2025-10-29 17:35:56] SUCCESS: Container 70ab7c6dc4a579d03613f14a67564f9e4aa47bdaf6a94e51204a7a418f9d6327 started for 7f9422fc8372b7c4b1a2
=== Container logs for 7f9422fc8372b7c4b1a2 ===
  File "/snippet.py", line 34
    print "##################"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7f9422fc8372b7c4b1a2 ===
[2025-10-29 17:35:58] INFO: Container 70ab7c6dc4a579d03613f14a67564f9e4aa47bdaf6a94e51204a7a418f9d6327 has stopped
